# Vytalwatch

./: .dockerignore  .env.example  .gitignore  ANALYTICS_DASHBOARD_SUMMARY.md  AUDIT_REPORT.md  CLAUDE.md  CODEBASE_AUDIT.md  CTO_CODEBASE_ASSESSMENT.md  CTO_PLATFORM_ASSESSMENT.md  ENTERPRISE_FEATURES.md  FINAL_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  PRODUCTION_ASSESSMENT_REPORT.md  PRODUCTION_AUDIT_REPORT.md  PROJECT_STATUS.md  RESHADX_PLAID_ANALYSIS.md  RPM_ENHANCEMENT_PLAN.md  create_prescriptions.sql  docker-compose.yml  fix_patient_consents.sql  package-lock.json
.github/workflows/: backup-automation.yml  ci-cd.yml  ci.yml  docker.yml  dr-test.yml  e2e.yml  production-deployment.yml  security.yml  staging-deployment.yml
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  knexfile.ts  package.json  tsconfig.json
backend/docs/: ANALYTICS.md  STREAMING.md  openapi.yaml
backend/examples/: streaming-client.ts
deploy/: .env.production  DEPLOYMENT.md  DEPLOY_NOW.md  backup.sh  deploy.sh  docker-compose.hetzner.yml  fix-csp.sh  generate-secrets.sh  hetzner-deploy.ps1  hetzner-deploy.sh  init-db.sql  setup-env.sh  setup-server.sh  ssl-setup.sh
sdks/python/: README.md  pyproject.toml  requirements.txt  setup.py
sdks/python/reshadx/: __init__.py  client.py
sdks/python/reshadx/models/: __init__.py  accounts.py  auth.py  common.py  credit.py  risk.py  transactions.py  webhooks.py
sdks/python/reshadx/resources/: __init__.py  accounts.py  auth.py  credit_score.py  items.py  link.py  risk.py  transactions.py  webhooks.py
sdks/python/reshadx/utils/: __init__.py  errors.py  http.py
src/: App.tsx
vitalwatch-backend/: .env.example  .gitignore  Dockerfile  jest.config.js  package-lock.json  package.json  staff_tables.sql
vitalwatch-frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  tailwind.config.ts
(+753 files in other folders)
